@@ -365,7 +365,6 @@ Head over to the tutorials and notebooks listed above for more examples.
 * Have some sample data sets for users to play around with. Should be able to load these from the code itself.
 * Sorting with missing data present.
 * Make vectors aware of the data frame that they are a part of.
-* MultiIndex support.
 * re_index should re establish previous index values in the newly supplied index.
 
 ## Contributing
