@@ -1,0 +1,12 @@
+module Daru
+  module Core
+    class GroupBy
+
+      attr_reader :groups
+
+      def initialize context, vectors
+        
+      end
+    end
+  end
+end
